--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
         </div>
     </section>
+    <section id="diagrams"></section>
 
     <script src="js/scripts.js"></script>
 </body>
