- added map svg / functionality

--- a/diagrams.html
+++ b/diagrams.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles/diagram.css">
-
 </head>
 <body>
-    <p>Diagram section</p>
+    <div class="diagrams-container">
+        <object class="map" id="myMap" data="assets/svg/romania.svg" type="image/svg+xml"></object>
+    </div>
+    <script src="js/diagram.js"></script>
 </body>
 </html>
