slider functionality + up-to-date main

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
     </section>
     <section id="diagrams"></section>
+    <!-- <section id="carousel"></section> -->
 
     <script src="js/scripts.js"></script>
 </body>
