project structure edited - uthils added

--- a/uthils/slider/slider.html
+++ b/uthils/slider/slider.html
@@ -4,20 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Carousel</title>
-<link rel="stylesheet" href="./styles/slider.css">
+<link rel="stylesheet" href="slider.css">
 </head>
 <body>
 
 <div class="carousel">
   <div class="slides">
     <div class="slide">
-      <img src="assets/pictures/500px-photography-landscape-wallpaper-preview (1).jpg" alt="Slide 1">
+      <img src="../../assets/pictures/500px-photography-landscape-wallpaper-preview (1).jpg" alt="Slide 1">
     </div>
     <div class="slide">
-      <img src="assets/pictures/500px-photography-landscape-wallpaper-preview.jpg" alt="Slide 2">
+      <img src="../../assets/pictures/500px-photography-landscape-wallpaper-preview.jpg" alt="Slide 2">
     </div>
     <div class="slide">
-        <img src="assets/pictures/stock-photo-121488495-1500x1000.jpg" alt="Slide 2">
+        <img src="../../assets/pictures/stock-photo-121488495-1500x1000.jpg" alt="Slide 2">
       </div>
     <!-- Add more slides as needed -->
   </div>
@@ -25,6 +25,6 @@
   <button class="control next">&#10095;</button>
 </div>
 
-<script src="js/slider.js"></script>
+<script src="slider.js"></script>
 </body>
 </html>
