--- a/uthils/login-form/login.html
+++ b/uthils/login-form/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="styles/login-form.css">
+    <link rel="stylesheet" href="login-form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -34,6 +34,6 @@
     </div>
 </div>
 
-<script src="js/login-form.js"></script>
+<script src="login-form.js"></script>
 </body>
 </html>
