--- a/landing-page.html
+++ b/landing-page.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-    
+    <link rel="stylesheet" href="styles/landing-page.css">
+
 </head>
 <body>
+
+    <section class="join-comunity">
+        <p><b>Join our comunity</b></p>
+    </section>
+
+    <section class="mission">
+        <div class="mission-background"></div>
+        <h2>Romanian Drug Explorer</h2>
+    </section>
     
 </body>
 </html>
