--- a/charts.html
+++ b/charts.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/chart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <title>RoDX</title>
@@ -22,20 +23,14 @@
     </section>
     <section id="charts">
         <div class="charts-container">
-            <div class="charts-container__column-chart">
-
-            </div>
+            <div id="charts-container__column-chart" class="charts-container__column-chart"></div>
             <div class="charts-container__flex-container">
-                <div class="charts-container__flex-container-item">
-                    
-                </div>
-                <div class="charts-container__flex-container-item">
-                    
-                </div>
+                <div id="charts-container__flex-container-pie-chart" class="charts-container__flex-container-item"><p>Chart 2</p></div>
+                <div id="charts-container__flex-container-line-chart" class="charts-container__flex-container-item"><p>Chart 3</p></div>
             </div>
         </div>
     </section>
 
-    <script src="js/scripts.js"></script>
+    <script type="module" src="js/chart.js"></script>
 </body>
 </html>
