slider added on landing page + code structure

--- a/landing-page.html
+++ b/landing-page.html
@@ -10,14 +10,18 @@
 </head>
 <body>
 
-    <section class="join-comunity">
-        <p><b>Join our comunity</b></p>
-    </section>
+    <!-- <section class="join-comunity">
+        <p id="join-comunity"></p>
+    </section> -->
 
     <section class="mission">
         <div class="mission-background"></div>
         <h2>Romanian Drug Explorer</h2>
     </section>
+
+    <section id="landing-page-slider">
+    </section>
     
+    <script src="js/landing-page.js" type="module"></script>
 </body>
 </html>
