- added labels to colum / line chart

--- a/charts.html
+++ b/charts.html
@@ -39,7 +39,25 @@
                 <div id="charts-container__flex-container-line-chart" class="charts-container__flex-container-item">
                 </div>
                 <div class="charts-container__flex-container-item_details-line-chart">
-                    <p>Test safasfs</p>
+                    <p>The popularity of drug in the last year.</p>
+                    <div class="display-flex flex-direction-column">
+                        <div class="display-flex">
+                            <div class="square line-red"></div>
+                            <span>Marijuana</span>
+                        </div>
+                        <div class="display-flex">
+                            <div class="square line-blue"></div>
+                            <span>Cocaine</span>
+                        </div>
+                        <div class="display-flex">
+                            <div class="square line-yellow"></div>
+                            <span>MDMA</span>
+                        </div>
+                        <div class="display-flex">
+                            <div class="square line-green"></div>
+                            <span>Heroin</span>
+                        </div>
+                    </div>
                 </div>
             </div>
     </section>
