landing page login+presentation,responsive started

--- a/landing-page.html
+++ b/landing-page.html
@@ -15,12 +15,20 @@
     </section> -->
 
     <section class="mission">
-        <div class="mission-background"></div>
-        <h2>Romanian Drug Explorer</h2>
+        <h2 class="mission-title">Romanian Drug Explorer</h2>
+        <a id="join-comunity"></a>
     </section>
 
-    <section id="landing-page-slider">
+
+
+    <section id="landing-page-slider"></section>
+
+    <section id="banner-wrapper">
+        <h2>Unveiling Romania's Substance Scene</h2>
+        <p>A Comprehensive Look at Our Nation's Substance Scene. Committed to combating drug abuse. Providing support, education, and resources for drug-free lives. Promoting a safer and informed society for all</p>
     </section>
+
+    <section id=""></section>
     
     <script src="js/landing-page.js" type="module"></script>
 </body>
