--- a/charts.html
+++ b/charts.html
@@ -35,11 +35,11 @@
                 </div>
                 <div id="charts-container__column-chart" class="charts-container__column-chart"></div>
             </div>
-            <div class="charts-container__flex-container">
+            <div class="charts-container__flex-container__line-chart-container">
                 <div id="charts-container__flex-container-line-chart" class="charts-container__flex-container-item">
                 </div>
                 <div class="charts-container__flex-container-item_details-line-chart">
-                    <p>The popularity of drug in the last year.</p>
+                    <p>The popularity of drugs in the last year.</p>
                     <div class="display-flex flex-direction-column">
                         <div class="display-flex">
                             <div class="square line-red"></div>
