--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="navigation-items">
                 <li class="navigation-items__item">Explore</li>
                 <li class="navigation-items__item">Community</li>
-                <li class="navigation-items__item">More</li>
+                <li class="navigation-items__item" id="support-us-btn">Support Us</li>
             </ul>
         </div>
     </section>
