--- a/landing-page.html
+++ b/landing-page.html
@@ -16,7 +16,8 @@
 
     <section class="mission">
         <h2 class="mission-title">Romanian Drug Explorer</h2>
-        <a id="join-comunity"></a>
+        <a id="join-comunity">Join us to delve into comprehensive statistics revealing drug use
+        </a>
     </section>
 
 
