new component added - expanding cards + amends

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <section class="navigation">
         <div class="navigation-wrapper">
             <ul class="navigation-items">
-                <li class="navigation-items__item">Explore</li>
-                <li class="navigation-items__item">Community</li>
+                <li class="navigation-items__item" id="explore-btn">Explore</li>
+                <li class="navigation-items__item" id="community-btn">Community</li>
                 <li class="navigation-items__item" id="support-us-btn">Support Us</li>
             </ul>
         </div>
