--- a/landing-page.html
+++ b/landing-page.html
@@ -9,28 +9,20 @@
 
 </head>
 <body>
-
-    <!-- <section class="join-comunity">
-        <p id="join-comunity"></p>
-    </section> -->
-
     <section class="mission">
         <h2 class="mission-title">Romanian Drug Explorer</h2>
         <a id="join-comunity">Join us to delve into comprehensive statistics revealing drug use
         </a>
     </section>
-
-
-
     <section id="landing-page-slider"></section>
-
     <section id="banner-wrapper">
         <h2>Unveiling Romania's Substance Scene</h2>
         <p>A Comprehensive Look at Our Nation's Substance Scene. Committed to combating drug abuse. Providing support, education, and resources for drug-free lives. Promoting a safer and informed society for all</p>
     </section>
+    <section id="faq"></section>
+    <section id="community-cards">
+    </section>
 
-    <section id=""></section>
-    
     <script src="js/landing-page.js" type="module"></script>
 </body>
 </html>
