add download CSV file for charts

--- a/charts.html
+++ b/charts.html
@@ -39,7 +39,7 @@
                 <div id="charts-container__flex-container-line-chart" class="charts-container__flex-container-item">
                 </div>
                 <div class="charts-container__flex-container-item_details-line-chart">
-                    <p>The popularity of drugs in the last year.</p>
+                    <p>The popularity of drugs in the last year.<i class="fa fa-download" id="download-popularity" title="Download popularity of drugs in CSV file format"></i></p>
                     <div class="display-flex flex-direction-column">
                         <div class="display-flex">
                             <div class="square line-red"></div>
@@ -59,6 +59,7 @@
                         </div>
                     </div>
                 </div>
+                <input type="hidden" id="line-chart-value"/>
             </div>
     </section>
 
